--- a/src/app/components/dashboards/machines/machines.component.scss
+++ b/src/app/components/dashboards/machines/machines.component.scss
@@ -11,9 +11,16 @@ table {
     .mat-cell {
         cursor: pointer;
     }
+    .mat-icon-button {
+        vertical-align: baseline;
+    }
 }
 
 td,
 th {
     width: 25%;
+}
+
+li p {
+    margin-left: 10px;
 }
