--- a/src/app/components/dashboards/dashboard/dashboard.component.html
+++ b/src/app/components/dashboards/dashboard/dashboard.component.html
@@ -1,35 +1,44 @@
-<mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-</mat-form-field>
+<div fxLayout="column" fxLayoutGap="30px">
+    <h1>Lines
+        <div fxFlex fxLayout="row" fxLayoutAlign="flex-end" *ngIf="isNotUser">
+            <button mat-icon-button color="primary" (click)="openDialog()">
+                <mat-icon inline style="font-size: 42px;margin: 0;padding: 0;">add_circle</mat-icon>
+            </button>
+        </div>
+    </h1>
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. L-36" #input>
+    </mat-form-field>
 
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
 
 
-        <ng-container matColumnDef="ressource">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ressource </th>
-            <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row.ressource}} </td>
-        </ng-container>
+            <ng-container matColumnDef="ressource">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Ressource </th>
+                <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row.ressource}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="operation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Operation </th>
-            <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row.operation}} </td>
-        </ng-container>
+            <ng-container matColumnDef="operation">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Operation </th>
+                <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row.operation}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="designation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation </th>
-            <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row.designation}} </td>
-        </ng-container>
+            <ng-container matColumnDef="designation">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation </th>
+                <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row.designation}} </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-        </tr>
-    </table>
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    </div>
 </div>
