--- a/src/app/components/dashboards/machines/machines.component.html
+++ b/src/app/components/dashboards/machines/machines.component.html
@@ -1,35 +1,83 @@
-<mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-</mat-form-field>
+<div fxLayout="column" fxLayoutGap="30px" *ngIf="line">
+    <div>
+        <h1>Line: <span *ngIf="!edit && isNotUser"><button mat-icon-button (click)="edit=true;"><mat-icon>edit</mat-icon></button></span></h1>
+        <ul *ngIf="!edit" style="list-style-type: none;">
+            <li>
+                <h3>Ressource :</h3>
+                <p>{{line.ressource}}</p>
+            </li>
+            <li>
+                <h3>Operation :</h3>
+                <p>{{line.operation}}</p>
+            </li>
+            <li>
+                <h3>Designation :</h3>
+                <p>{{line.designation}}</p>
+            </li>
+        </ul>
+        <form [formGroup]="lineForm" novalidate fxLayout="column" fxLayoutGap="10px" *ngIf="edit">
+            <mat-form-field>
+                <mat-label>Ressource</mat-label>
+                <input matInput formControlName="ressource">
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Operation</mat-label>
+                <input matInput formControlName="operation">
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Designation</mat-label>
+                <input matInput formControlName="designation">
+            </mat-form-field>
+            <div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="end end">
+                <button mat-button color="warn" (click)="resetForm()">Cancel</button>
+                <button mat-raised-button color="warn" (click)="delete()">Delete</button>
+                <button mat-raised-button color="primary" (click)="save()" [disabled]="lineForm.invalid || !lineForm.dirty">Update</button>
+            </div>
+        </form>
+    </div>
+    <h1>Machines:
+        <div fxFlex fxLayout="row" fxLayoutAlign="flex-end" *ngIf="isNotUser">
+            <button mat-icon-button color="primary" (click)="openAddDialog()">
+                <mat-icon inline style="font-size: 42px;margin: 0;padding: 0;">add_circle</mat-icon>
+            </button>
+        </div>
+    </h1>
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+    </mat-form-field>
 
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
 
 
-        <ng-container matColumnDef="ressource">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ressource </th>
-            <td mat-cell *matCellDef="let row" (click)="openDialog(row._id)"> {{row.ressource}} </td>
-        </ng-container>
+            <ng-container matColumnDef="ressource">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Ressource </th>
+                <td mat-cell *matCellDef="let row" (click)="openDialog(row)"> {{row.ressource}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="operation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Operation </th>
-            <td mat-cell *matCellDef="let row" (click)="openDialog(row._id)"> {{row.operation}} </td>
-        </ng-container>
+            <ng-container matColumnDef="operation">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Operation </th>
+                <td mat-cell *matCellDef="let row" (click)="openDialog(row)"> {{row.operation}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="designation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation </th>
-            <td mat-cell *matCellDef="let row" (click)="openDialog(row._id)"> {{row.designation}} </td>
-        </ng-container>
+            <ng-container matColumnDef="designation">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation </th>
+                <td mat-cell *matCellDef="let row" (click)="openDialog(row)"> {{row.designation}} </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-        </tr>
-    </table>
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    </div>
+</div>
+<div *ngIf="line==null">
+    <h1>404</h1>
 </div>
