--- a/src/app/components/dialogs/add-line/add-line.component.html
+++ b/src/app/components/dialogs/add-line/add-line.component.html
@@ -2,16 +2,8 @@
 <div mat-dialog-content>
     <form [formGroup]="lineForm" novalidate fxLayout="column" fxLayoutGap="10px">
         <mat-form-field>
-            <mat-label>Ressource</mat-label>
-            <input matInput formControlName="ressource">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Operation</mat-label>
-            <input matInput formControlName="operation">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Designation</mat-label>
-            <input matInput formControlName="designation">
+            <mat-label>Line Name</mat-label>
+            <input matInput formControlName="name">
         </mat-form-field>
     </form>
 </div>
