--- a/src/app/components/dashboards/dashboard/dashboard.component.html
+++ b/src/app/components/dashboards/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxLayoutGap="30px">
     <h1>Lines
-        <div fxFlex fxLayout="row" fxLayoutAlign="flex-end" *ngIf="isNotUser">
+        <div fxFlex fxLayout="row" fxLayoutAlign="flex-end" *ngIf="isSuperAdmin">
             <button mat-icon-button color="primary" (click)="openDialog()">
                 <mat-icon inline style="font-size: 42px;margin: 0;padding: 0;">add_circle</mat-icon>
             </button>
@@ -15,19 +15,9 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
 
-            <ng-container matColumnDef="ressource">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Ressource </th>
-                <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row.ressource}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="operation">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Operation </th>
-                <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row.operation}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="designation">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation </th>
-                <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row.designation}} </td>
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                <td mat-cell *matCellDef="let row" [routerLink]="['/machines',row._id]"> {{row._id}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
