--- a/src/app/components/dashboards/machines/machines.component.html
+++ b/src/app/components/dashboards/machines/machines.component.html
@@ -1,42 +1,10 @@
-<div fxLayout="column" fxLayoutGap="30px" *ngIf="line">
+<div fxLayout="column" fxLayoutGap="30px" *ngIf="!notFound">
     <div>
-        <h1>Line: <span *ngIf="!edit && isNotUser"><button mat-icon-button (click)="edit=true;"><mat-icon>edit</mat-icon></button></span></h1>
-        <ul *ngIf="!edit" style="list-style-type: none;">
-            <li>
-                <h3>Ressource :</h3>
-                <p>{{line.ressource}}</p>
-            </li>
-            <li>
-                <h3>Operation :</h3>
-                <p>{{line.operation}}</p>
-            </li>
-            <li>
-                <h3>Designation :</h3>
-                <p>{{line.designation}}</p>
-            </li>
-        </ul>
-        <form [formGroup]="lineForm" novalidate fxLayout="column" fxLayoutGap="10px" *ngIf="edit">
-            <mat-form-field>
-                <mat-label>Ressource</mat-label>
-                <input matInput formControlName="ressource">
-            </mat-form-field>
-            <mat-form-field>
-                <mat-label>Operation</mat-label>
-                <input matInput formControlName="operation">
-            </mat-form-field>
-            <mat-form-field>
-                <mat-label>Designation</mat-label>
-                <input matInput formControlName="designation">
-            </mat-form-field>
-            <div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="end end">
-                <button mat-button color="warn" (click)="resetForm()">Cancel</button>
-                <button mat-raised-button color="warn" (click)="delete()">Delete</button>
-                <button mat-raised-button color="primary" (click)="save()" [disabled]="lineForm.invalid || !lineForm.dirty">Update</button>
-            </div>
-        </form>
+        <div style="width: 100%;" align="right" *ngIf="isSuperAdmin"><button mat-raised-button color="warn" (click)="delete()">Delete</button></div>
+        <h1>Line: {{id}}</h1>
     </div>
     <h1>Machines:
-        <div fxFlex fxLayout="row" fxLayoutAlign="flex-end" *ngIf="isNotUser">
+        <div fxFlex fxLayout="row" fxLayoutAlign="flex-end" *ngIf="isSuperAdmin">
             <button mat-icon-button color="primary" (click)="openAddDialog()">
                 <mat-icon inline style="font-size: 42px;margin: 0;padding: 0;">add_circle</mat-icon>
             </button>
@@ -53,7 +21,7 @@
 
             <ng-container matColumnDef="ressource">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Ressource </th>
-                <td mat-cell *matCellDef="let row" (click)="openDialog(row)"> {{row.ressource}} </td>
+                <td mat-cell *matCellDef="let row" (click)="openDialog(row)"> {{row._id}} </td>
             </ng-container>
 
             <ng-container matColumnDef="operation">
@@ -61,9 +29,14 @@
                 <td mat-cell *matCellDef="let row" (click)="openDialog(row)"> {{row.operation}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="designation">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation </th>
-                <td mat-cell *matCellDef="let row" (click)="openDialog(row)"> {{row.designation}} </td>
+            <ng-container matColumnDef="server">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Machine Host </th>
+                <td mat-cell *matCellDef="let row" (click)="openDialog(row)"> {{row.server}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="mode">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Mode </th>
+                <td mat-cell *matCellDef="let row" (click)="openDialog(row)"> {{row.mode}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -78,6 +51,6 @@
         <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </div>
 </div>
-<div *ngIf="line==null">
-    <h1>404</h1>
+<div *ngIf="notFound">
+    <app-not-found></app-not-found>
 </div>
