--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -4,7 +4,9 @@
             <mat-icon>menu</mat-icon>
         </button>
 
-        <span> APP LOGO </span>
+        <span class="material-icons">
+            home
+            </span>
 
         <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
             <ul fxLayout="row" fxLayoutGap="20px">
