--- a/src/app/components/update-history/update-history.component.html
+++ b/src/app/components/update-history/update-history.component.html
@@ -1,31 +1,34 @@
-<h1>Notifications
-</h1>
-<mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-</mat-form-field>
+<div class="container_history">
+    <h1>Notifications
+    </h1>
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+    </mat-form-field>
 
-<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
-    <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-        <th mat-header-cell *matHeaderCellDef> <span *ngIf="column!=='updatedAt'">{{column}} </span><span *ngIf="column=='updatedAt'">Date</span></th>
-        <td mat-cell *matCellDef="let element" [class.unseen]="!element.seen"> <span *ngIf="column!=='updatedAt'">{{element[column]}}</span><span *ngIf="column=='updatedAt'">{{date(element[column])}}</span> </td>
-    </ng-container>
+    <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+        <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+            <th mat-header-cell *matHeaderCellDef> <span *ngIf="column!=='updatedAt'">{{column}} </span><span *ngIf="column=='updatedAt'">Date</span></th>
+            <td mat-cell *matCellDef="let element" [class.unseen]="!element.seen"> <span *ngIf="column!=='updatedAt'">{{element[column]}}</span><span *ngIf="column=='updatedAt'">{{date(element[column])}}</span> </td>
+        </ng-container>
 
-    <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-    <ng-container matColumnDef="expandedDetail">
-        <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-            <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                <div class="example-element-description">
-                    <h5>Doc ID: </h5>{{element.doc_id}}
-                    <h5>Updated to:</h5>{{element.updated | json}}
-                    <span class="example-element-description-attribution"> -- {{element.username}} </span>
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+                <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                    <div class="example-element-description">
+                        <h5>Doc ID: </h5>{{element.doc_id}}
+                        <h5>Updated to:</h5>{{element.updated | json}}
+                        <span class="example-element-description-attribution"> -- {{element.username}} </span>
+                    </div>
                 </div>
-            </div>
-        </td>
-    </ng-container>
+            </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-    <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row" [class.example-expanded-row]="expandedElement === element" (click)="expandedElement = expandedElement === element ? null : element">
-    </tr>
-    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-</table>
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row" [class.example-expanded-row]="expandedElement === element" (click)="expandedElement = expandedElement === element ? null : element">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+</div>
