--- a/src/app/components/update-history/update-history.component.scss
+++ b/src/app/components/update-history/update-history.component.scss
@@ -49,3 +49,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 .unseen {
     background-color: rgba(108, 108, 131, 0.11);
 }
+
+.container_history {
+    margin-bottom: 50px;
+}
